# sim_quadruped

./: README.md
devel/: .catkin  local_setup.sh
devel/lib/pkgconfig/: mini_2.pc
devel/share/mini_2/cmake/: mini_2Config.cmake
src/mini_2/: CMakeLists.txt  package.xml
src/mini_2/config/: joint_names_mini_2.yaml
src/mini_2/launch/: display.launch  gazebo.launch
src/mini_2/meshes/: LB.STL  LF.STL  RB.STL  RF.STL  base_link.STL  big_leg_lb.STL  big_leg_lf.STL  big_leg_rb.STL  big_leg_rf.STL  small_leg_lb.STL  small_leg_lf.STL  small_leg_rb.STL  small_leg_rf.STL
src/mini_2/urdf/: .xacro  mini_2.csv  mini_2.urdf
