<package format="2">
  <name>mini_2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for mini_2</p>
    <p>This package contains configuration data, 3D models and launch files
for mini_2 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="985324779@qq.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
    <gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>
  </export>
</package>
